sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:20: error: not found: value read4less
read4less(); 
^